[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Kulraj Suri <kulraj.suri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
xgboost = "^2.1.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
